
	* web/stepinto.html.in: Link to the renamed entry page.

	* web/html-to-cgi, web/to-html, doc/Makefile, web/Makefile:
	Add the extension '.py' to 'html-to-cgi' and 'to-html', to clearly
	show they are Python scripts, and not CGI or HTML things.

	* doc/*.all, doc/*.html, doc/*.txt, web/Makefile: Move all template
	files to the web generation directory, and adjust the 'make' rules. 

2007-06-22  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/i18n-aliases: Add the ability to generate a procmailrc
	file with forwarding rules for each team and each domain name,
	but most importantly: with a rule to forward a mail to all
	team leaders or all maintainers.

	* Makefile, registry/Makefile: Regenerate the procmail rules when
	the registry has changed.

	* Makefile: Create a distributable package of just the progs/
	subdirectory, which unpacks to a properly versioned directory.

	* doc/Makefile, doc/index.html, lib/config.py, lib/localweb.py,
	web/Makefile, web/html-to-cgi, web/layout.html, web/stepinto.html.in:
	Make all hyperlinks relative instead of full URLs.

	* bin/make-package-links.sh: Add a script that creates a forest of
	symlinks to the files in the PO-files/ subdirectory, but arranged in
	a subdir per package instead of per language.

	* bin/po-register: Regenerate the static pages also when running dry;
	there's no harm in that, and it's a good test.

	* Makefile, registry/Makefile: Regenerate the static team and domain
	index pages when the registry has been modified.

2007-06-21  Benno Schulenberg  <benno@vertaalt.nl>

	* po/*: Add Finnish and Irish translations of the TP-robot, update
	the others with differentiated robot/coordinator addresses.

	* Makefile: Store the tp-robot.pot file among the po files, but
	let svn ignore it.

	* bin/po-register: Stop gettextizing messages to maintainers and
	team leaders when they get output in English only anyway.  Spare
	the translators of tp-robot some pointless work.
